# loja

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/app/: settings.py  urls.py
src/core/middleware/: exceptions.py  middlewares.py
src/core/models/: base_model.py
src/products/: admin.py  models.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_product_created_at_product_is_active_and_more.py
src/products/repositories/: product_repository.py
src/products/services/: product_service.py
src/products/templates/products/: detail.html  list.html
tests/: factories.py
tests/products/: test_integration.py  test_models.py  test_repositories.py  test_services.py  test_views.py
